--- a/2_常见面试题提问.md
+++ b/2_常见面试题提问.md
@@ -1,6 +1,6 @@
 # 数据库
 ### [MySQL](http://note.youdao.com/noteshare?id=a63744a640d4e2f911342d113de7a741&sub=B9975EB2A9954DC0833B1553C6BD7795)
-1. delete, truncate , drop 的区别？
+1. [delete, truncate , drop 的区别？](http://www.runoob.com/note/22984)
 2. [数据库四大语言分类](https://blog.csdn.net/weixin_42829876/article/details/81413749)
 2. varchar和char的区别
 3.  什么是事务?事务的四大特征及隔离级别
