--- a/2_常见面试题提问.md
+++ b/2_常见面试题提问.md
@@ -2,9 +2,9 @@
 ### [MySQL](http://note.youdao.com/noteshare?id=a63744a640d4e2f911342d113de7a741&sub=B9975EB2A9954DC0833B1553C6BD7795)
 1. [delete, truncate , drop 的区别？](http://www.runoob.com/note/22984)
 2. [数据库四大语言分类](https://blog.csdn.net/weixin_42829876/article/details/81413749)
-2. varchar和char的区别
-3.  什么是事务?事务的四大特征及隔离级别
-4.  数据库的存储引擎
+2. [varchar和char的区别](https://cloud.tencent.com/developer/article/1040116)
+3. [什么是事务?事务的四大特征及隔离级别](https://www.jianshu.com/p/06f3542240b4)
+4. [数据库的存储引擎](https://github.com/jaywcjlove/mysql-tutorial/blob/master/chapter3/3.5.md)
 5.  索引的目的，好处，缺点，使用情况，不能使用的情况
 6.  sql优化
 7.  索引法则
